# bazel-lib

./: MODULE.bazel
.github/workflows/: bcr.yml  release.yml  release_prep.sh  weekly_tag.yaml
.github/workflows/bcr/: metadata.template.json
lib/: repositories.bzl
lib/private/: copy_directory_toolchain.bzl  copy_to_directory_toolchain.bzl  expand_template_toolchain.bzl
tools/: BUILD.bazel  integrity.bzl
tools/release/: BUILD.bazel  release.bzl
